--- a/blocks/_base/variables.sass
+++ b/blocks/_base/variables.sass
@@ -7,7 +7,8 @@
 // $media-xxs: 320px
 
 /***********************COLORS & FONTS***********************/
-$main-font: "Lato", Helvetica, sans-serif
+$main-font: "Proxima", Verdana, sans-serif
+$accent-font: "Arciform"
 $font-color-dark: #4a4a4a
 $bg-color-light: #f2f2f2
 $main-gradient: linear-gradient(to top, #9b23ea, #5f72bd)
