--- a/blocks/social/social.sass
+++ b/blocks/social/social.sass
@@ -3,6 +3,7 @@
     display: flex
     transform-origin: 100% 100%
     transform: rotate(-90deg)
+    margin-top: -40px
   &-item
     color: $main-color-header
     text-transform: uppercase
