--- a/blocks/main.sass
+++ b/blocks/main.sass
@@ -14,7 +14,8 @@
 @import "gamburger/gamburger"
 @import "swipe/swipe"
 @import "social/social"
-// @import "swipe-count/swipe-count"
+@import "swipeCount/swipeCount"
+@import "logo/logo"
 // @import "logo/logo"
 // @import "head-line/head-line"
 // @import "intro/intro"
